complete all APIs

--- a/home/Templates/index.html
+++ b/home/Templates/index.html
@@ -8,6 +8,26 @@
 
 
 <h1>Hello World!</h1>
+<h3>APIs Routers</h3>
 
+<a href="api/v1/services">Service API</a>                               
+<br>
+<a href="api/v1/insurances">Insurance API</a>
+<br>
+<a href="api/v1/omras">Omra API</a>
+<br>
+<a href="api/v1/organizedjourneys">Organized Journey API</a>
+<br>
+<a href="api/v1/others">Other API</a>
+<br>
+<a href="api/v1/temphotelreservations">Temp Hotel Reservation API</a>
+<br>
+<a href="api/v1/tickets">Ticket API</a>
+<br>
+<a href="api/v1/travelhotelreservations">Travel Hotel Reservation API</a>
+<br>
+<a href="api/v1/visas">Visa API</a>
+<br>
+<a href="api/v1/clients">Client API</a>
 
 {% endblock %}
