Add Country, Region, City APIs

--- a/home/Templates/index.html
+++ b/home/Templates/index.html
@@ -29,5 +29,11 @@
 <a href="api/v1/visas">Visa API</a>
 <br>
 <a href="api/v1/clients">Client API</a>
+<br>
+<a href="api/v1/countries">Country API</a>
+<br>
+<a href="api/v1/regions">Region API</a>
+<br>
+<a href="api/v1/cities">City API</a>
 
 {% endblock %}
