--- a/home/Templates/index.html
+++ b/home/Templates/index.html
@@ -20,8 +20,8 @@
 <br>
 <a href="api/v1/others">Other API</a>
 <br>
-<a href="api/v1/temphotelreservations">Temp Hotel Reservation API</a>
-<br>
+{% comment %} <a href="api/v1/temphotelreservations">Temp Hotel Reservation API</a>
+<br> {% endcomment %}
 <a href="api/v1/tickets">Ticket API</a>
 <br>
 <a href="api/v1/travelhotelreservations">Travel Hotel Reservation API</a>
