--- a/home/Templates/index.html
+++ b/home/Templates/index.html
@@ -30,6 +30,8 @@
 <br>
 <a href="api/v1/clients">Client API</a>
 <br>
+<a href="api/v1/payments">Payment API</a>
+<br>
 <a href="api/v1/countries">Country API</a>
 <br>
 <a href="api/v1/regions">Region API</a>
