--- a/home/Templates/index.html
+++ b/home/Templates/index.html
@@ -22,8 +22,8 @@
 <br>
 {% comment %} <a href="api/v1/temphotelreservations">Temp Hotel Reservation API</a>
 <br> {% endcomment %}
-<a href="api/v1/tickets">Ticket API</a>
-<br>
+{% comment %} <a href="api/v1/tickets">Ticket API</a>
+<br> {% endcomment %}
 <a href="api/v1/travelhotelreservations">Travel Hotel Reservation API</a>
 <br>
 <a href="api/v1/visas">Visa API</a>
